# pigeon

./: .bumpversion.toml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yaml  test.yaml
docs/: conf.py  index.rst
examples/: Dockerfile.publisher  Dockerfile.subscriber  dev.env  publisher.py  server.sh  subscriber.py
pigeon/: __main__.py  base_msg.py  client.py  exceptions.py  messages.py  utils.py
tests/: test_call_with_correct_args.py  test_client.py  test_message_handler.py  test_utils.py  test_zipkin.py
